<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Chase</string>
    <string name="app_id">169473563243077</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Login to The Chase using Facebook</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="title_activity_news_feed_test">NewsFeedTestActivity</string>
    <string name="hunt_name_example">Around the Town Hunt</string>
    <string name="rating">3 stars</string>
    <string name="creator">You</string>
    <string name="hunt_details_example">This is a fun hunt around San Francisco. It includes a gas station, a Chinese take out restaurant, the best Pizza place in town and ends at a young and hip place !</string>
    <string name="menu_create_hunt">Create Hunt</string>
    <string name="title_activity_maps_test">MapsTestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_chase">Make a Chase</string>
    <string name="add_headline_hint">Add a headline</string>
    <string name="add_details_hint">Add some details</string>
    <string name="difficulty_prompt">Choose difficulty</string>

    <string-array name="difficulty_list">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="array_filter">
        <item>Rating</item>
        <item>Difficulty</item>
        <item>Date</item>
    </string-array>

    <string name="dialog_image_desc_take_picture">Take Picture</string>
    <string name="dialog_image_desc_select_picture">Select Picture</string>
    <string name="create_button_label">Create</string>
    <string name="dialog_header">Header</string>
    <string name="dialog_title_text">Add a picture</string>
    <string name="add_image_description">Add Image</string>
    <string name="title_activity_placeholder">PlaceholderActivity</string>
    <string name="title_activity_hunt_details">Hunt Details</string>
    <string name="title_activity_hunt_play">Hunt in Progress</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string-array name="menu_drawer_array">
        <item>Profile</item>
        <item>Settings</item>
        <item>Invite Friends</item>
        <item>About</item>
        <item>Log Out</item>
    </string-array>
    <string-array name="menu_drawer_array_profile">
        <item>Home</item>
        <item>Settings</item>
        <item>Invite Friends</item>
        <item>About</item>
        <item>Log Out</item>
    </string-array>

    <string name="add_location_title">Add Location</string>
    <string name="latitude_label">Latitude</string>
    <string name="empty">" "</string>
    <string name="longitude_label">Longitude</string>
    <string name="place">Place</string>
    <string name="add_hint_hint">Add a hint ...</string>
    <string name="add_location_title">Add location to chase</string>
    <string name="title_activity_create_chase_locations">CreateChaseLocationsActivity</string>
    <string name="map_view_placeholder">Map view to create locations</string>
    <string name="title_activity_add_chase_location">AddChaseLocation</string>
    <string name="add_btn_label">Add</string>
    <string name="title_activity_hunt_map_with_markers">Hunt map with markers</string>
    <string name="title_activity_hunt_show_image">HuntShowImageActivity</string>
    <string name="add_location_help_text">Search or long press to start</string>
    <string name="discard_btn_label">Discard</string>
    <string name="done_btn_label">Done</string>
    <string name="search_btn_txt">Search button</string>
    <string name="go_btn_txt">Go</string>
    <string name="created_by_label">created by: </string>
    <string name="title_activity_hunt_success">Hunt Summary</string>

</resources>