<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.parse.ParseImageView
        android:id="@+id/ivHuntImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:scaleX="0.5"
        android:src="@drawable/sample_project_hunt" />

    <TextView
        android:id="@+id/tvHuntDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHuntName"
        android:layout_below="@+id/tvHuntName"
        android:layout_marginTop="14dp"
        android:text="@string/hunt_details_example" />

        <TextView
        android:id="@+id/tvHuntRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvHuntName"
        android:layout_alignBottom="@+id/tvHuntName"
        android:paddingLeft="40dp"
        android:paddingBottom="5dp"
        android:text="@string/rating" />

    <TextView
        android:id="@+id/tvHuntName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivHuntImage"
        android:layout_toRightOf="@+id/ivHuntImage"
        android:text="@string/hunt_name_example"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <TextView
        android:id="@+id/tvHuntCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHuntRating"
        android:layout_below="@+id/tvHuntRating"
        android:paddingLeft="40dp"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:text="@string/creator" />

</RelativeLayout>
