<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title_text" />

    <View
        android:id="@+id/hline"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#3E99CC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ivTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/dialog_image_desc_take_picture"
            android:src="@android:drawable/ic_menu_camera" />

        <View
            android:id="@+id/vline"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:background="#3E99CC" />

        <ImageView
            android:id="@+id/ivSelectPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/dialog_image_desc_select_picture"
            android:src="@android:drawable/ic_menu_gallery" />
    </LinearLayout>

</LinearLayout>