<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/trHeader"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="#47B4EA"
        android:focusable="false" >

        <TextView
            android:id="@+id/tvAddLocationHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/trLatRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvLatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="right"
            android:text="@string/latitude_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvLatValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#47B4EA" />

    <TableRow
        android:id="@+id/trLongRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvLongText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="right"
            android:text="@string/longitude_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvLongValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#47B4EA" />

    <TableRow
        android:id="@+id/trFriendlyNameRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvFriendlyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="right"
            android:text="@string/place"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" >

        </EditText>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#47B4EA" />

    <TableRow
        android:id="@+id/trHintImageRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <fragment
            android:id="@+id/fAddImage"
            android:tag="PictureFragment"
            android:name="com.chaseit.fragments.AddPictureFragment"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            tools:layout="@layout/fragment_add_picture"><requestFocus />
       </fragment>

    </TableRow>

    <TableRow
        android:id="@+id/trHintTextRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etChaseHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|top"
            android:hint="@string/add_hint_hint"
            android:inputType="textMultiLine"
            android:lines="5" />

    </TableRow>

    <TableRow
        android:id="@+id/trButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/btnAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_btn_label" />
    </TableRow>

</TableLayout>